[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcompiler"
version = "0.0.1"
description = "Toy memory-aware scheduling pass for transformer subgraphs."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

